<resources>
    <string name="app_name">FitLife</string>
    <string name="tv_bmi_description"><b>O que é IMC? </b>  O IMC é uma medida que avalia seu peso em relação à sua altura. \n<br></br> <b>Para que serve?</b><br /> Indica se você está abaixo do peso, com peso saudável, com sobrepeso ou obeso.\n<br /><b>Como calcular?</b><br /> Divida seu peso (kg) pela altura (m) ao quadrado: IMC = peso / (altura * altura).</string>
    <string name="tv_bmr_description"><b>TMB </b> é o cálculo para descrobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida. \n Vale destacar, é claro, que esse cálculo depende de outros fatores clínicos para ser elaborado</string>
    <string name="et_weight">Digite seu peso (kg)</string>
    <string name="tv_bmi_title">IMC</string>
    <string name="tv_bmi_history_title">Historico IMC</string>
    <string name="tv_bmr_title">TMB</string>
    <string name="tv_bmr_history_title">Historico TMB</string>
    <string name="et_height">Digite sua altura (cm)</string>
    <string name="btn_calculate">Calcular</string>
    <string name="toast_message_validation">Todos os campos devem ser maiores que zero</string>
    <string name="save">Salvar</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito Abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="imc_normal">Normal</string>
    <string name="imc_hight_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente Obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="imc_response">Seu IMC é: %1$.2f</string>
    <string name="saved">Registro salvo com sucesso</string>
    <string name="search">Buscar\n</string>
    <string name="et_age">Idade</string>
    <string name="rb_txt_man">Homem</string>
    <string name="rb_txt_woman">Mulher</string>

    <string name="bmr_response">Você precisa consumir: %1$.2f calorias</string>
    <string name="bmr_msg">Tenha uma alimentação saudável e equilibrada. Priorize alimentos ricos em nutrientes.</string>
    <string name="txt_edit">Editar</string>
    <string name="txt_delete">Excluir\n</string>
    <string name="txt_share">Compartilhar</string>

</resources>
