<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context=".BmrActivity">



    <TextView
        android:id="@+id/tv_bmr_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bmr_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgroup_gender"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bmr_description">

        <RadioButton
            android:id="@+id/rb_gender_man"
            android:layout_width="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_txt_man" />

        <RadioButton
            android:id="@+id/rb_gender_woman"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_txt_woman" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_bmr_weight"
        style="@style/EditTextForm"
        android:hint="@string/et_weight"
        android:inputType="numberDecimal"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgroup_gender" />

    <EditText
        android:id="@+id/et_bmr_height"
        style="@style/EditTextForm"
        android:hint="@string/et_height"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_bmr_weight" />

    <EditText
        android:id="@+id/et_bmr_age"
        style="@style/EditTextForm"
        android:hint="@string/et_age"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_bmr_height" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_lifestyle"
        style="@style/AutoTextViewForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_bmr_age">

        <AutoCompleteTextView
            android:id="@+id/auto_lifestyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_bmr_calculate"
        style="@style/ButtonForm"
        android:layout_marginTop="40dp"
        android:text="@string/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_lifestyle" />


</androidx.constraintlayout.widget.ConstraintLayout>